# ntfy-rust-client

./: Cargo.toml  README.md
src/: main.rs
