[package]
name = "ntfy-client"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
serde_json = "1.0.140"
serde_yml = "0.0.12"
tungstenite = { version = "0.26.2", features = ["native-tls"] }
xdg = "2.5.2"
log = { version = "0.4", features = [
	"max_level_debug",
	"release_max_level_info",
] }
env_logger = "0.11.7"
